--- a/source/prison/tests/CMakeLists.txt
+++ b/source/prison/tests/CMakeLists.txt
@@ -1,6 +1,12 @@
-list(APPEND CMAKE_PREFIX_PATH $ENV{CATCH2_PATH})
+Include(FetchContent)
 
-find_package(Catch2 3 REQUIRED)
+FetchContent_Declare(
+  Catch2
+  GIT_REPOSITORY https://github.com/catchorg/Catch2.git
+  GIT_TAG        v3.7.0
+)
+
+FetchContent_MakeAvailable(Catch2)
 
 file(GLOB_RECURSE
     TESTS_SRC
