wczytanie configa z yaml

--- a/source/src/CMakeLists.txt
+++ b/source/src/CMakeLists.txt
@@ -1,10 +1,3 @@
-file(GLOB_RECURSE
-    PROG_SRC
-    *.cpp
-)
-
-add_executable(prog ${PROG_SRC})
-
+add_executable(prog main.cpp)
 target_link_libraries(prog PUBLIC prison_lib)
-
 install(TARGETS prog RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/build)
