--- a/data/config/config1.ini
+++ b/data/config/config1.ini
@@ -7,8 +7,6 @@
 # A:Cooperate   [ R , R ]     [ S , T ]
 # A:Betray      [ T , S ]     [ P , P ]
 #
-# Classic constraints:
-# T > R > P > S
 # --------------------------------------------------
 
 [main]
@@ -30,7 +28,7 @@ strategy3 = 0.25   # 25%
 # --------------------------------------------------
 
 [payoff]
-R = 3   # reward for mutual cooperation
-S = 0   # sucker's payoff
+R = 3   # reward for cooperation
+S = 0   # payoff
 T = 5   # temptation to defect
-P = 1   # punishment for mutual defection
+P = 1   # punishment for defection
