changed basic config example

--- a/data/config/config1.ini
+++ b/data/config/config1.ini
@@ -1,34 +1,44 @@
 # --------------------------------------------------
-# Prisoner's Dilemma configuration
+# Konfiguracja Dylematu Wieznia
 #
-# Payoff matrix (2×2):
+# Macierz wyplat (2x2):
 #
-#               B:Cooperate   B:Betray
-# A:Cooperate   [ R , R ]     [ S , T ]
-# A:Betray      [ T , S ]     [ P , P ]
+#               B:Wspolpraca  B:Zdrada
+# A:Wspolpraca  [ R , R ]     [ S , T ]
+# A:Zdrada      [ T , S ]     [ P , P ]
 #
+#
+# num_prisoners -  calkowita liczba graczy
+# num_epochs - liczba rund symulacji
+#
+#
+# --------------------------------------------------
+# strtegies
+# Poczatkowy rozklad strategii
+# Wartosci powinny sumowac sie do 1.0
+# --------------------------------------------------
+#
+# --------------------------------------------------
+# Parametry wyplat
+# --------------------------------------------------
+#
+# T - pokusa zdrady (wyplata za zdrade, gdy drugi wspolpracuje)
+# R - nagroda za obopolna wspolprace
+# P - kara za obopolna zdrade
+# S - wyplata zdradzonego
 # --------------------------------------------------
 
 [main]
-num_prisoners = 100    # total number of players
-num_epochs   = 50     # number of simulation rounds
-
-# --------------------------------------------------
-# Initial strategy distribution
-# Values should sum to 1.0
-# --------------------------------------------------
+num_prisoners = 100    
+num_epochs   = 50     
 
 [strategies]
-strategy1 = 0.50   # 50%
-strategy2 = 0.25   # 25%
-strategy3 = 0.25   # 25%
-
-# --------------------------------------------------
-# Payoff parameters
-# --------------------------------------------------
+strategy1 = 0.50   
+strategy2 = 0.15   
+strategy3 = 0.35   
 
 [payoff]
-R = 3   # reward for cooperation
-S = 0   # payoff
-T = 5   # temptation to defect
-P = 1   # punishment for defection
+R = 3
+S = 0
+T = 5
+P = 1
