Zmiany względem config

--- a/source/prison/tests/CMakeLists.txt
+++ b/source/prison/tests/CMakeLists.txt
@@ -14,3 +14,7 @@ target_link_libraries(test_prison_lib PUBLIC prison_lib)
 target_link_libraries(test_prison_lib PRIVATE  Catch2::Catch2 Catch2::Catch2WithMain)
 
 install(TARGETS test_prison_lib RUNTIME DESTINATION ${CMAKE_SOURCE_DIR}/build)
+
+target_compile_definitions(test_prison_lib PRIVATE
+  SYLVINE_TEST_CONFIG_PATH="${CMAKE_SOURCE_DIR}/../data/config/config1.ini"
+)
