--- a/data/config/config1.ini
+++ b/data/config/config1.ini
@@ -33,9 +33,9 @@ num_prisoners = 100
 num_epochs   = 50     
 
 [strategies]
-strategy1 = 0.50   
-strategy2 = 0.15   
-strategy3 = 0.35   
+AlwaysPositives = 0.50   
+AlwaysNegatives = 0.15   
+RandomDecision = 0.35   
 
 [payoff]
 R = 3
